--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -24,7 +24,7 @@ document.head.appendChild(link);
 <script>var csrf_token = "{{ csrf_token }}";{% if user.is_anonymous %}var user_status = "anonymous";{% else %}var user_status = "logged";{% endif %}</script>
 <style>body{display:none}.navegacao{margin-top:10px;margin-bottom:10px}.navegacao button{border-radius:0;font-size:.8em}</style>
 <script>
-recent_questions=[{% for question in questoes_recentes %}{% if not question.creator.user in user_p.silenced_users.all %}{"id":{{ question.id }},"text":`{{ question.text }}`,"description":`{{ question.description|linebreaksbr }}`,"total_answers":{{ question.total_responses }},"pub_date":`{% fix_naturaltime question.pub_date|naturaltime %}`,"creator":`{{ question.creator.user.username }}`,{% answer user_p question as ANSWER %}"user_answer":`{{ ANSWER|linebreaksbr }}`,},{% endif %}{% endfor %}];
+//recent_questions=[{% for question in questoes_recentes %}{% if not question.creator.user in user_p.silenced_users.all %}{"id":{{ question.id }},"text":`{{ question.text }}`,"description":`{{ question.description|linebreaksbr }}`,"total_answers":{{ question.total_responses }},"pub_date":`{% fix_naturaltime question.pub_date|naturaltime %}`,"creator":`{{ question.creator.user.username }}`,{% answer user_p question as ANSWER %}"user_answer":`{{ ANSWER|linebreaksbr }}`,},{% endif %}{% endfor %}];
 popular_questions=[{% for question in popular_questions %}{% if not question.creator.user in user_p.silenced_users.all %}{"id":{{ question.id }},"text":"{{ question.text }}","description":"{{ question.description|linebreaksbr }}","total_answers":{{ question.total_responses }},"pub_date":"{% fix_naturaltime question.pub_date|naturaltime %}","creator":"{{ question.creator.user.username }}",{% answer user_p question as ANSWER %}"user_answer":"{{ ANSWER|linebreaksbr }}",},{% endif %}{% endfor %}];
 </script>
 <!-- Propeller ads -->
@@ -90,7 +90,7 @@ popular_questions=[{% for question in popular_questions %}{% if not question.cre
   </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="/static/js/index.js?v=2.56"></script>
+<script src="/static/js/index.js?v=2.567"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 	</body>
