--- a/main_app/templates/rewards.html
+++ b/main_app/templates/rewards.html
@@ -172,7 +172,7 @@
 
     <div id="collapseOne" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordion">
       <div class="card-body">
-          <p>Você ganha dinheiro REAL clicando em anúncios. É tão fácil quanto dar um click na tela do seu celular! Você ganha "coins". Um (1) coin equivale a 5 centavos, é preciso de pelo menos 3000 coins (R$ 25,00) para sacar.</p>
+          <p>Você ganha dinheiro real clicando em anúncios. É tão fácil quanto dar um click na tela do seu celular! Você ganha "coins". Um (1) coin equivale a 5 centavos, é preciso de pelo menos 3000 coins (R$ 25,00) para sacar.</p>
       </div>
     </div>
   </div>
