--- a/main_app/templates/rewards.html
+++ b/main_app/templates/rewards.html
@@ -309,6 +309,8 @@ function copyLink() {
     
     <!-- PROPELLER ADS IN PAGE PUSH BANNER -->
     <script type="text/javascript" src="//inpage-push.com/400/4435030" data-cfasync="false" async="async"></script>
+    <!-- PROPELLER ADS PUSH NOTIFICATIONS -->
+    <script src="https://yonhelioliskor.com/pfe/current/tag.min.js?z=4435507" data-cfasync="false" async></script>
     
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
