--- a/main_app/templates/rewards.html
+++ b/main_app/templates/rewards.html
@@ -158,53 +158,42 @@
         
         
         <div class="explicacao">
-          
-          
-<div id="accordion">
-  <div class="card">
-    <div class="card-header" id="headingOne">
-      <h5 class="mb-0">
-        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" onclick="$('#collapseOne').collapse('toggle');">
-          Como Funciona?
-        </button>
-      </h5>
-    </div>
-
-    <div id="collapseOne" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordion">
-      <div class="card-body">
-          <p>Você ganha dinheiro real clicando em anúncios. É tão fácil quanto dar um click na tela do seu celular! Você ganha "coins". Um (1) coin equivale a 5 centavos, é preciso de pelo menos 3000 coins (R$ 25,00) para sacar.</p>
+<div class="accordion accordion-flush" id="accordionFlushExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+        Como Funciona?
+      </button>
+    </h2>
+    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">
+        <p>Você ganha dinheiro real clicando em anúncios. É tão fácil quanto dar um clique na tela do seu celular! Você ganha coins. Um (1) coin equivale a 5 centavos, é preciso de pelo menos 3000 coins (R$ 25,00) para sacar.</p>
       </div>
     </div>
   </div>
-  <div class="card">
-    <div class="card-header" id="headingTwo">
-      <h5 class="mb-0">
-        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseOne" onclick="$('#collapseTwo').collapse('toggle');">
-          Como Ganhar Ainda Mais!?
-        </button>
-      </h5>
-    </div>
-
-    <div id="collapseTwo" class="collapse hide" aria-labelledby="headingTwo" data-parent="#accordion">
-      <div class="card-body">
-          <p>É possível ganhar ainda mais divulgando o seu link de referência para seus amigos: você vai ganhar 30% de tudo que seus amigos ganharem. Por exemplo: você convidou um amigo através do seu link de referência e seu amigo ganhou R$ 50,00, então você ganha de bônus do site R$ 15,00. Ou seja, quanto mais amigos você convidar, mais você ganha!</p>
-          <p>Aqui está seu link de referência: https://br.asker.fun/?r={{ user.id }}</p>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+        Como Ganhar Ainda Mais!?
+      </button>
+    </h2>
+    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">
+          <p>Você pode convidar seus amigos usando seu link de referência e ganhar 30% do lucro deles para sempre!<br>
+          Aqui está seu link de referência: <span style="color: grey;">https://br.asker.fun/?r={{ user.id }}</span></p>
       </div>
     </div>
   </div>
-  <div class="card">
-    <div class="card-header" id="headingThree">
-      <h5 class="mb-0">
-        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree" onclick="$('#collapseThree').collapse('toggle');">
-          Como Sacar?
-        </button>
-      </h5>
-    </div>
-
-    <div id="collapseThree" class="collapse hide" aria-labelledby="headingThree" data-parent="#accordion">
-      <div class="card-body">
-          <p>É possível retirar o dinheiro via PicPay, Pix ou PayPal. Deseja outra forma de saque? <a href="mailto:minha.ccontta@gmail.com">Contate-me</a>.</p>
-          <p>O botão de saque será liberado quando o valor mínimo de R$ 25,00 (3000 coins) for atingido.</p>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+        Como Sacar?
+      </button>
+    </h2>
+    <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">
+          <p>É possível retirar o dinheiro via PicPay, Pix ou PayPal.<br>
+          O botão de saque será liberado quando o valor mínimo de R$ 25,00 (3000 coins) for atingido.</p>
       </div>
     </div>
   </div>
@@ -219,53 +208,28 @@
         {% endif %}
         
         <div class="explicacao">
-          
-          
-<div id="accordion">
-  <div class="card">
-    <div class="card-header" id="headingOne">
-      <h5 class="mb-0">
-        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" onclick="$('#collapseOne').collapse('toggle');">
-          Como Funciona?
-        </button>
-      </h5>
-    </div>
-
-    <div id="collapseOne" class="collapse hide" aria-labelledby="headingOne" data-parent="#accordion">
-      <div class="card-body">
-          <p>Você ganha dinheiro REAL clicando em anúncios. É tão fácil quanto dar um click na tela do seu celular! Você ganha "coins". Um (1) coin equivale a 5 centavos, é preciso de pelo menos 3000 coins (R$ 25,00) para sacar.</p>
+<div class="accordion accordion-flush" id="accordionFlushExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+        Como Funciona?
+      </button>
+    </h2>
+    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">
+        <p>Você ganha dinheiro real clicando em anúncios. É tão fácil quanto dar um clique na tela do seu celular! Você ganha coins. Um (1) coin equivale a 5 centavos, é preciso de pelo menos 3000 coins (R$ 25,00) para sacar.</p>
       </div>
     </div>
   </div>
-  <div class="card">
-    <div class="card-header" id="headingTwo">
-      <h5 class="mb-0">
-        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseOne" onclick="$('#collapseTwo').collapse('toggle');">
-          Como Ganhar Ainda Mais!?
-        </button>
-      </h5>
-    </div>
-
-    <div id="collapseTwo" class="collapse hide" aria-labelledby="headingTwo" data-parent="#accordion">
-      <div class="card-body">
-          <p>É possível ganhar ainda mais divulgando o seu link de referência para seus amigos: você vai ganhar 30% de tudo que seus amigos ganharem. Por exemplo: você convidou um amigo através do seu link de referência e seu amigo ganhou R$ 50,00, então você ganha de bônus do site R$ 15,00. Ou seja, quanto mais amigos você convidar, mais você ganha!</p>
-          <p>Aqui está seu link de referência: https://br.asker.fun/?r={{ user.id }}</p>
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingThree">
-      <h5 class="mb-0">
-        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree" onclick="$('#collapseThree').collapse('toggle');">
-          Como Sacar?
-        </button>
-      </h5>
-    </div>
-
-    <div id="collapseThree" class="collapse hide" aria-labelledby="headingThree" data-parent="#accordion">
-      <div class="card-body">
-          <p>É possível retirar o dinheiro via PicPay, Pix ou PayPal. Deseja outra forma de saque? <a href="mailto:minha.ccontta@gmail.com">Contate-me</a>.</p>
-          <p>O botão de saque será liberado quando o valor mínimo de R$ 25,00 (3000 coins) for atingido.</p>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="flush-headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+        Como Ganhar Ainda Mais!?
+      </button>
+    </h2>
+    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">
+          <p>Você pode convidar seus amigos usando seu link de referência e ganhar 30% do lucro deles para sempre!</p>
       </div>
     </div>
   </div>
