--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -90,13 +90,15 @@ popular_questions=[{% for question in popular_questions %}{% if not question.cre
   </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="/static/js/index.js?v=2.5678"></script>
+<script src="/static/js/index.js?v=2.56789"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 <!-- sem ads se o tráfego for de twibb -->
 <script>
 if (window.location.search.indexOf("nabift") != -1) {
-alert("ops");
+  for(var index in document.getElementsByClassName("q-title")) {
+    document.getElementsByClassName("q-title")[index].href += "?nabift=y";
+  }
 }
 </script>
 	</body>
