--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -158,6 +158,10 @@
 							<button class="btn btn-outline-danger">Apagar</button>
 						</form>
 					{% endif %}
+                    
+                    <div class="categories">
+                        <p>Categorias: <a href="#">Tecnologia</a>, <a href="#">Ciência</a>.</p>
+                    </div>
 				</div>
 			</div>
 
