--- a/main_app/templates/ask.html
+++ b/main_app/templates/ask.html
@@ -51,9 +51,11 @@
 						<img src="/static/images/loading.gif" width="10%">
 						<span style="vertical-align: middle">Carregando imagem</span>
 					</div>
-
+                    
 					<a href="#" class="vertical-spaced clickable" onclick="togglePoll();">Incluir enquete</a>
-
+                    
+                    <a href="#" class="vertical-spaced clickable">Adicionar categorias</a>
+                    
 					<div class="card" id="poll-box" style="display: none;"><div class="card-body">
 						<input id="choices-counter" type="hidden" name="choices-count" value="0">
 						<input type="checkbox" name="is-multichoice" id="is-multichoice"><label class="left-spaced" for="is-multichoice">Permitir múltiplas escolhas</label>
