--- a/main_app/templates/rewards.html
+++ b/main_app/templates/rewards.html
@@ -108,7 +108,7 @@
   setInterval(handler, 1000);
   handler();
 </script>
-<center><p>Espere o tempo acima para resgatar mais coins.</p></center>
+<center><p>Espere o tempo acima para resgatar mais coins.</p><p>Enquanto isso, responda ou faça <a href="/">perguntas</a> :)</p></center>
       <hr>
         {% else %}
         
@@ -194,6 +194,7 @@
       <div class="accordion-body">
           <p>É possível retirar o dinheiro via PicPay, Pix ou PayPal.<br>
           O botão de saque será liberado quando o valor mínimo de R$ 25,00 (3000 coins) for atingido.</p>
+          <p>Obs: para sacar, você precisa ter pelo menos 10 referências ativas. Ativo = pelo menos 2 cliques no anúncio.</p>
       </div>
     </div>
   </div>
