--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -159,9 +159,19 @@
 						</form>
 					{% endif %}
                     
-                    <div class="categories">
-                        <p>Categorias: <a href="#">Tecnologia</a>, <a href="#">Ciência</a>.</p>
-                    </div>
+                    {% if question.category.all %}
+                        <div class="categories">
+                            <p><span class="text-secondary">Categoria(s)</span>:
+                            {% for category in question.category.all %}
+                                {% if forloop.last %}
+                                    <a href="#">{{ category.name }}</a>.
+                                {% else %}
+                                    <a href="#">{{ category.name }}</a>,
+                                {% endif %}
+                            {% endfor %}
+                            </p>
+                        </div>
+                    {% endif %}
 				</div>
 			</div>
 
