--- a/main_app/templates/rewards.html
+++ b/main_app/templates/rewards.html
@@ -108,7 +108,7 @@
   setInterval(handler, 1000);
   handler();
 </script>
-<center><p>Espere o tempo acima para resgatar mais coins.</p><p>Enquanto isso, responda ou faça <a href="/">perguntas</a> :)</p></center>
+<center><p>Espere o tempo acima para resgatar mais coins.</p><p>Enquanto isso, responda e/ou faça <a href="/">perguntas</a> :)</p></center>
       <hr>
         {% else %}
         
