--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -36,8 +36,7 @@
 		</script>
 		
 		{% if user.is_anonymous and not NO_SHOW_ADS %}
-			<!-- popunder -->
-			<script type='text/javascript' src='//pl16413934.alternativecpmgate.com/d6/7a/10/d67a10c6aac13f8da9beabf04bd46d6b.js'></script>
+			<script type='text/javascript' src='//pl16501151.highperformancecpm.com/40/16/25/401625261f29ca1666968a67f459e500.js'></script>
 		{% endif %}
 	</head>
 	<body>
@@ -160,15 +159,6 @@
 					{% endif %}
 				</div>
 			</div>
-
-			{% if user.is_anonymous and not NO_SHOW_ADS %}
-				<div class="alert alert-info">
-					<h5 class="alert-heading">Opa!</h5>
-					<p>
-						<a href="/signup">Crie uma conta</a> para remover os anúncios (redirecionamentos automáticos).
-					</p>
-				</div>
-			{% endif %}
 
 			<section class="card bg-main" id="responses">
   				<div class="card-header">
