--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -90,7 +90,6 @@ popular_questions=[{% for question in popular_questions %}{% if not question.cre
   </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="/static/js/index.js?v=2.56789"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 <!-- sem ads se o tráfego for de twibb -->
@@ -101,5 +100,8 @@ if (window.location.search.indexOf("nabift") != -1) {
   }
 }
 </script>
+<script src="https://cdn.jsdelivr.net/npm/linkifyjs@2.1.9/dist/linkify.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/linkifyjs@2.1.9/dist/linkify-jquery.min.js"></script>
+<script src="/static/js/index.js?v=3"></script>
 	</body>
 </html>
