--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -30,6 +30,9 @@ popular_questions=[{% for question in popular_questions %}{% if not question.cre
 <!-- Propeller ads -->
 <meta name="propeller" content="08161356dc022ea83aa0c1c2b5097e09">
 </head>
+{% if SOCIAL_AD %}
+<script type='text/javascript' src='//pl16501151.highperformancecpm.com/40/16/25/401625261f29ca1666968a67f459e500.js'></script>
+{% endif %}
 	<body>
 	{% include "includes/navbar.html" %}
 <main>
