--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -262,13 +262,14 @@
 		{% endif %}
 
 		{% endif %}<br>
-		</main><script src="/static/js/profile.js?v=8"></script>
+        <script src="https://cdn.jsdelivr.net/npm/linkifyjs@2.1.9/dist/linkify.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/linkifyjs@2.1.9/dist/linkify-jquery.min.js"></script>
+		</main><script src="/static/js/profile.js?v=8.1"></script>
 		<script>
 if (getDarkCookie() == 'true') {
 	document.getElementsByClassName('navbar')[0].classList.remove("navbar-light");
 	document.getElementsByClassName('navbar')[0].classList.add("navbar-dark");
 }
 		</script>
-
 	</body>
 </html>
