--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -66,7 +66,7 @@
 					{% if question.description %}
 						<div>
 							<hr>
-							<p>{{ question.description|linebreaksbr }}</p>
+							<p class="description">{{ question.description|linebreaksbr }}</p>
 						</div>
 					{% endif %}
 
@@ -212,8 +212,10 @@
 				{% endif %}
 			{% endif %}
 	</main>
+        <script src="https://cdn.jsdelivr.net/npm/linkifyjs@2.1.9/dist/linkify.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/linkifyjs@2.1.9/dist/linkify-jquery.min.js"></script>
 		<script src="/static/js/general_functions.js?version=3"></script>
-		<script src="/static/js/question.js?v=16.7"></script>
+		<script src="/static/js/question.js?v=16.8"></script>
         
 		{% if user.is_anonymous and not NO_SHOW_ADS %}
 			<script type='text/javascript' src='//pl16501151.highperformancecpm.com/40/16/25/401625261f29ca1666968a67f459e500.js'></script>
