--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -163,7 +163,7 @@
             {% if user.is_anonymous %}
             <div class="text-center bg-light">
                 <hr>
-                <p>Faça <a href="/signin?redirect=/question/{{ question.id }}">login</a> ou <a href="/signup?redirect=/question/{{ question.id }}">crie uma conta</a> para responder essa pergunta.</p>
+                <p>Faça <a href="/signin?redirect=/question/{{ question.id }}">login</a> ou <a href="/signup?redirect=/question/{{ question.id }}">crie uma conta</a> para responder essa pergunta e remover os anúncios.</p>
                 <hr>
             </div>
             {% endif %}
@@ -227,7 +227,7 @@
             {% if user.is_anonymous %}
             <div class="text-center bg-light">
                 <hr>
-                <p>Faça <a href="/signin?redirect=/question/{{ question.id }}">login</a> ou <a href="/signup?redirect=/question/{{ question.id }}">crie uma conta</a> para responder essa pergunta.</p>
+                <p>Faça <a href="/signin?redirect=/question/{{ question.id }}">login</a> ou <a href="/signup?redirect=/question/{{ question.id }}">crie uma conta</a> para responder essa pergunta e remover os anúncios.</p>
                 <hr>
             </div>
             {% endif %}
